# STAT650-midterm

./: README.md  Report- in process  dashboard.py  data_drop.csv  final_data.csv  midterm_analysis.ipynb  midterm_preprocessing.ipynb  pyproject.toml  questions.txt  utils.py  visualization.py
dashboard_code/: .gitignore  Dockerfile  README.md  dashboard.py  dashboard_component.py  dataset.py  main.py  navbar.py  pyproject.toml  sections.py
docs/: final-report.docx  ~$nal-report.docx
gui/: dashboard.py  dashboard_section.py  data_final.csv  main.py
