[tool.poetry]
name = "stat650"
version = "0.1.0"
description = ""
authors = ["Henry Ruiz  <henryruiz22@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.23.2"
pandas = "^1.5.0"
jupyter = "^1.0.0"
jupyterlab = "^3.4.5"
scipy = "^1.9.1"
matplotlib = "^3.5.3"
seaborn = "^0.11.2"
openpyxl = "^3.0.10"
pingouin = "^0.5.2"
matplotlib-venn = "^0.11.7"
pycountry = "^22.3.5"
geopy = "^2.2.0"
pycountry-convert = "^0.7.2"
plotly = "^5.10.0"
dash = "^2.6.2"
jupyter-dash = "^0.4.2"
ipykernel = "^6.16.0"

[tool.poetry.dev-dependencies]
black = "^22.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
